--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
-.wrapper {
-  /* background-color: yellow; */
-}
 
-.title {
+.header-container {
   width: 100%;
+
+  background: linear-gradient(70deg, white, blue, #0d253f);
+  justify-content: space-between;
+  align-items: center;
+}
+.logo-container {
+  color: white;
+  margin-right: 5px;
+}
+.title {
   font-size: 48px;
 
-  text-shadow: 5px 4px 4px #0e0ae4d2;
+  text-shadow: 5px 4px 4px #92d415d2;
 
-  color: rgb(252, 245, 245);
-  background: radial-gradient(white, blue);
-  /* background: linear-gradient(135deg, #b6e703, #1a0cdf, rgb(10, 25, 240)); */
-  /* background: #228b22; */
+  color: rgba(6, 6, 99, 0.986);
   font-weight: bold;
 }
 .hero-container {
@@ -30,6 +34,7 @@
 .left-container {
   height: auto;
 }
+
 .movie-search-container {
   width: 100%;
   height: auto;
@@ -77,18 +82,9 @@
   transform-origin: center center; /* Ensures scaling happens from the center */
   transition: transform 1s ease-in-out, filter 1s ease-in-out; /* Apply transition to both transform and filter */
 }
-.movie-card-item img:hover {
-  /* transform: scale(2); Enlarge the image by 20% */
-  transform: scale(2) translate(50%, -50%); /* Scale the image and move it towards the center */
-
-  filter: brightness(1.2); /* Optionally, add a slight brightness effect */
-}
 
 .right-container {
   position: relative;
-  /* background: rgb(233, 216, 216); */
-
-  /* min-height: 100vh; */
 }
 
 .modern-tv {
@@ -150,24 +146,6 @@
   box-shadow: 0 4px 10px rgba(71, 8, 245, 0.774);
 }
 
-/* .slider-container { */
-/* display: flex; */
-/* position: relative; */
-/* width: 100%; Take full width of the parent */
-/* height: 100%; */
-/* justify-content: center; */
-/* align-items: center; */
-/* transition: transform 1s ease; */
-/* } */
-
-/* .trending-movies {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
-} */
-
 .slider-item {
   padding: 10px;
   display: flex;
@@ -179,6 +157,7 @@
   width: 100%;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .slick-dots {
@@ -195,17 +174,44 @@
 .display-container {
   background: linear-gradient(blue, white);
 }
-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
+.footer-section {
+  height: auto;
   font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   /* background: linear-gradient(135deg, #b6e703, #1a0cdf, rgb(10, 25, 240)); */
-  background: linear-gradient(125deg, #1a0cdf, rgb(10, 25, 240), #b6e703);
+  background: linear-gradient(25deg, #1a0cdf, #b6e703, #0d253f);
 
   color: white;
 }
+.acknowledgement-tmdb {
+  font-size: 14px;
+  color: black;
+}
+.acknowledgement-tmdb a {
+  font-size: 18px;
+  color: #1acee6cb;
+
+  font-size: 18px;
+  text-decoration: none;
+}
+.tmdb-content {
+  font-size: 14px;
+  color: black;
+}
+.tmdb-content a {
+  color: #1acee6cb;
+
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.tmdb-content a:hover {
+  text-decoration: underline;
+}
+
 /* For screens below 768px */
 @media (max-width: 768px) {
   .hero-content {
